--- a/pvr.filmon/resources/language/resource.language.he_il/strings.po
+++ b/pvr.filmon/resources/language/resource.language.he_il/strings.po
@@ -22,7 +22,7 @@ msgstr "לקוח טלוויזיה חיה עבור Filmon"
 
 msgctxt "Addon Description"
 msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
-msgstr "לקוח טלוויזיה חיה של Filmon. תומך בהזרמת שידורים חיים, הצגת לוח שידורים ותזמון הקלטות. מחייב מנוי לשירות Filmon. לפני הפעלת ההרחבה: (א) יש לסמן ערוץ כמועדף ע"מ שיוצג ב־Kodi (ב) יש להזין שם משתמש וסיסמת שירות Filmon בהגדרות הרחבה זו. הערה: יכולות מספר דקות מתום ההקלטה עד אשר תהיה זמינה לצפייה."
+msgstr "לקוח טלוויזיה חיה של Filmon. תומך בהזרמת שידורים חיים, הצגת לוח שידורים ותזמון הקלטות. מחייב מנוי לשירות Filmon. לפני הפעלת ההרחבה: (א) יש לסמן ערוץ כמועדף עמ שיוצג ב־Kodi (ב) יש להזין שם משתמש וסיסמת שירות Filmon בהגדרות הרחבה זו. הערה: יכולות מספר דקות מתום ההקלטה עד אשר תהיה זמינה לצפייה."
 
 msgctxt "#30000"
 msgid "Username"
