--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,11 @@
+v19.0.0
+- Translations updates from Weblate
+  - fr_ca, mt_mt, te_in
+- Changed test builds to 'Kodi 19 Matrix'
+- Increased version to 19.0.0
+  - With start of Kodi 20 Nexus, takes addon as major the same version number as Kodi.
+    This done to know easier to which Kodi the addon works.
+
 v6.1.3
 - Translations updates from Weblate
 	- he_il
