--- a/pvr.filmon/resources/language/resource.language.it_it/strings.po
+++ b/pvr.filmon/resources/language/resource.language.it_it/strings.po
@@ -5,16 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Italian (Italy) (http://www.transifex.com/projects/p/kodi-main/language/it_IT/)\n"
-"Language: it_IT\n"
+"PO-Revision-Date: 2023-04-02 03:16+0000\n"
+"Last-Translator: Massimo Pissarello <mapi68@gmail.com>\n"
+"Language-Team: Italian <https://kodi.weblate.cloud/projects/kodi-add-ons-pvr-clients/pvr-filmon/it_it/>\n"
+"Language: it_it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.15.2\n"
 
 msgctxt "Addon Summary"
 msgid "Filmon PVR Client"
@@ -22,7 +23,7 @@ msgstr "Client PVR Filmon"
 
 msgctxt "Addon Description"
 msgid "Filmon frontend. Supports live TV, recordings, EPG. Requires a Filmon subscription. Before enabling: (a) in Filmon set channels as favourite to see them in Kodi (b) enter your username and password in this addon's settings. Note: recordings can take several minutes to appear after timer is completed."
-msgstr "Frontend Filmon. Supporta TV in diretta, registrazioni, EPG. Richiede l'abbonamento a Filmon. Prima di abilitare: (a) in Filmon, imposta i canali come preferiti per visualizzarli in Kodi (b) inserisci i tuoi username e password nelle impostazioni dell'addon. Nota: le registrazioni potrebbero apparire dopo alcuni minuti dallo scadere del timer."
+msgstr "Frontend Filmon. Supporta Live TV, registrazioni, EPG. Richiede l'abbonamento a Filmon. Prima di abilitare: (a) in Filmon, imposta i canali come preferiti per visualizzarli in Kodi (b) inserisci i tuoi nome utente e password nelle impostazioni dell'add-on. Nota: le registrazioni possono richiedere diversi minuti prima che appaiano dopo il completamento del timer."
 
 msgctxt "#30000"
 msgid "Username"
@@ -34,8 +35,8 @@ msgstr "Password"
 
 msgctxt "#30002"
 msgid "Prefer HD Streams"
-msgstr "Preferisci gli stream in HD"
+msgstr "Preferisci stream HD"
 
 msgctxt "#30003"
 msgid "Only load favourite channels"
-msgstr ""
+msgstr "Carica solo i canali preferiti"
