--- a/pvr.filmon/changelog.txt
+++ b/pvr.filmon/changelog.txt
@@ -1,3 +1,7 @@
+v21.0.2
+- Translations updates from Weblate
+	- et_ee
+
 v21.0.1
 - Translations updates from Weblate
 	- ast_es, de_de, es_es, fi_fi, fr_fr, hr_hr, it_it, ru_ru
